<resources >
    <string name="app_name">Verge</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiMmxhenkyZGVidWciLCJhIjoiY2pvbzdqdHJjMDFkOTNrc3U3cnlyZ3A0aCJ9.u6hnc-wFQhgefZW0eQRwFw</string>
    <string name="first_launch_description">Secure, anonymous and private \n Android wallet for Verge. \n Send and receive XVG</string>
    <string name="first_launch_new_wallet_button">&lt;b>&lt;big>Create a new wallet&lt;/big>&lt;/b>&lt;br />Create a new XVG wallet on your Android device.</string>
    <string name="first_launch_restore_wallet_button"> &lt;b>&lt;big>Restore your wallet&lt;/big>&lt;/b>&lt;br />Lost your Android wallet? Restore it here.</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_send">Send</string>
    <string name="title_receive">Receive</string>
    <string name="title_settings">Settings</string>
    <string name="card_transactions_title">Recent transactions</string>
    <string name="card_stats_title">Price statistics</string>
    <string name="cand_history_title">History Chart</string>
    <string name="transaction_message_main">No transactions received yet</string>
    <string name="transaction_message_sub">Open the bug XVG guide or receive XVG</string>
    <string name="send_message_main">Not enough balance</string>
    <string name="send_message_sub">You do not have enough balance to send any XVG. \n Please increase your balance</string>
    <string name="receive_current_code">DSiXiwK9uZ1uAy6PuqQWYBVQUaoGENZZaZ</string>
    <string name="receive_xvg_main">Send only XVG to this deposit address. \n Sending any other coin or token to this address may result in the loss of your deposit.</string>
    <string name="settings_desc1">Manage your wallet with the options given</string>
    <string name="splash_title">Verge Android wallet</string>
    <string name="splash_alpha_notice">This wallet is in alpha version for development and testing purposes. Do not deposit any funds on it.</string>
    <string name="splash_slogan">Privacy is our standard.</string>
    <string name="splash_sub">Alpha version 0.1.5 - Development use only</string>
    <string name="tor_settings_title">Tor is here for your privacy and hides your location</string>
    <string name="tor_settings_desc1">Your IP address is fully obfuscated and transactions are completely untraceable when you\'re using a Tor connection</string>
    <string name="tor_settings_desc2">But you can always turn Tor off.</string>
    <string name="tor_settings_obfuscate_on_off">Obfuscate IP</string>
    <string name="tor_settings_ip_desc">Your IP Address</string>
    <string name="disconnect_title">Disconnect this device from your current wallet</string>
    <string name="disconnect_desc">You\'re about to disconnect this device from your current wallet. \n Please make absolutely sure you have written down your paper key. Remember that your paper key is the only way to restore your current wallet.</string>
    <string name="disconnect_button">Disconnect</string>
    <string name="disconnect_show_paperkey">Or check your paper key once again…</string>
    <string name="paperkey_title">Write down your wallet paper key again</string>
    <string name="paperkey_desc">You want to see your paper key again? On the next screen, you\'ll be shown a list of words to write down on a piece of paper, which you should keep very safe!</string>
    <string name="paperkey_button">Show paper key</string>
    <string name="donate_title">Donate to support development</string>
    <string name="donate_desc1">At Verge we are always striving to achieve new heights and deliver products or software implementations that are requested by the community.</string>
    <string name="donate_desc2">Listening to our community members and taking in feedback is not only one of the core founding principles of Verge, but it is inherent in our open-source nature.</string>
    <string name="donate_donation_label">Donation XVG Address</string>
    <string name="donate_donation_address">DHe3mTNQztY1wWokdtMprdeCKNoMxyThoV</string>
    <string name="donate_button">Donate XVG</string>
    <string name="pinlock_setup_instructions">Your wallet PIN will be used to open this \n app and to send XVG with. If you forget it, \n you won\'t be able to access your wallet.</string>
    <string name="pinlock_title">Set wallet PIN</string>
    <string name="paperkey_activity_title">Paper key</string>
    <string name="paperkey_activity_main">On the next screen, you\'ll be shown a list of words to write down on a piece of paper, which you should keep very safe!</string>
    <string name="paperkey_activity_sub">Your paper key is the only way to restore your Verge Wallet if your phone is lost, stolen, broken or replaced. </string>
    <string name="paperkey_activity_button">Write down paper key</string>
    <string name="paperkey_instructions">Write down each word in the correct order on your paper. Keep this paper in a secure location.</string>
    <string name="paperkey_wallet_previous">Previous</string>
    <string name="paperkey_wallet_next">Next</string>
    <string name="paperkey_confirm_instructions">To make sure everything was written down correctly please enter the following words from your paper.</string>
    <string name="paperkey_confirm_submit">Submit</string>
    <string name="wallet_ready">Your wallet is ready! \n Congratulations</string>
    <string name="title_fiat_currency">Fiat currency</string>
    <string name="error_report_copy_button">&lt;b>&lt;big>Copy error report to clipboard&lt;/big>&lt;/b></string>
    <string name="error_report_exit_button"> &lt;b>&lt;big>Exit Verge Android Wallet&lt;/big>&lt;/b></string>
    <string name="error_uncaught_exception">Verge Android Wallet Unexpected Error</string>
    <string name="error_uncaught_exception_show_report">Show error report</string>
    <string name="transaction_detail_title">Transaction Detail</string>
    <string name="transaction_detail_title_address">Address</string>
    <string name="transaction_detail_title_transaction_id">Transaction Id</string>
    <string name="transaction_detail_title_confirmations">Confirmations</string>
    <string name="transaction_detail_title_message">Message</string>
    <string name="statistics_pageview_header">Price Statistics</string>
    <string name="charts_pageview_header">History Chart</string>
    <string name="twitter_pageview_header">Last tweets</string>
    <string name="paperkey_write_seed">Write down each word in the correct order on your paper</string>
    <string name="charts_high_label">High</string>
    <string name="charts_average_label">Average</string>
    <string name="charts_average_low">Low</string>
    <string name="graph_1d">1d</string>
    <string name="graph_1w">1w</string>
    <string name="graph_1m">1m</string>
    <string name="graph_3m">3m</string>
    <string name="graph_1y">1y</string>
    <string name="graph_all">All</string>
    <string name="paperkey_shown_title">Your paper key</string>
    <string name="paperkey_shown_sub1">Taking a screenshot is not secure. Write down the paper key on a piece of paper with a pen</string>
    <string name="paperkey_shown_sub2">Write down each word carefully without capital letters</string>
    <string name="passphrase_title">Derive your paper key with a passphrase</string>
    <string name="passphrase_desc">Encrypting your paper key is an important safety measure. Make sure when restoring a wallet to use your previous passphrase.</string>
    <string name="passphrase_button">Confirm</string>
    <string name="passphrase_8_chars">Min. 8 characters</string>
    <string name="passphrase_upper_lower">Uppercase and lowercase</string>
    <string name="passphrase_symbols"><![CDATA[Special character (!.,-#€%&+#)]]></string>
    <string name="passphrase_hint">Enter your passphrase</string>
    <string name="passphrase_confirm_title">Confirm your passphrase</string>
    <string name="qr_option_btn">QR</string>
    <string name="words_option_btn">Words</string>
    <string name="title_change_language">Change Language</string>
    <string name="title_change_theme">Change Theme</string>
    <string name="error_label">An error occurred</string>
    <string name="prog_placeholder">programatically</string>
    <string name="verge_bg_tag">Verge Background</string>
    <string name="localhost_label">127.0.0.1</string>
    <string name="wallet_ready_open">Open your wallet</string>
    <string name="history_chart_usd_only">chart data only available in USD</string>
    <string name="receive_view_amount_hint">Amount to receive</string>
    <string name="send_view_share">Share</string>
    <string name="send_view_recipient_hint">Recipient address</string>
    <string name="send_view_amount_hint">Amount</string>
    <string name="send_amount_memo_label">Internal memo (optional)</string>
    <string name="send_view_memo_hint">Gift to Justin</string>
    <string name="send_view_send_button">Send XVG</string>
    <string name="wallet_view_balance_label">XVG BALANCE</string>
    <string name="paperkey_view_next">Next</string>
    <string name="paperkey_view_done">Done</string>
    <string name="fragment_transaction_received_filter">Received</string>
    <string name="fragment_transaction_sent_filter">Sent</string>
    <string name="fragment_transaction_all_filter">All</string>
    <string name="set_wallet_pin_description">Your Wallet PIN will be used to open this app, and to send XVG with. If you forget it, you won\'t be able to access your wallet.</string>
    <string name="re_enter_pin_title">Re-enter the PIN</string>
    <string name="pin_prompt_label">Please insert your pin to continue</string>
    <string name="service_url_title">Service URL</string>
    <string name="save_button">Save</string>
    <string name="service_url_setting_header">WALLET SERVICE URL</string>
    <string name="service_url_desc">This application depends on Verge Wallet Service (VWS) for blockchain information, networking and Copayer synchronization. The default configuration points to https://vws.vergecurrency.com/vws/api (Verge\'s public VWS instance).</string>
    <string name="use_default_url">Use default URL</string>
    <string name="txtEnterPin">Enter your PIN</string>
	<string name="authorizations_activity_desc">To make sure Verge Wallet can work flawlessly, you need to allow the app to access the network and external storage to let data to be stored.</string>
    <string name="wallet_give_permissions">Next</string>
	<string name="permissions_activity_title">Permissions</string>
	<string name="activity_permissions_storage">Allow use of storage</string>
    <string name="activity_permissions_gps">Allow use of geolocation services</string>
	<string name="activity_permissions_camera">Allow use of camera</string>
	<string name="biometrics_title">Use Biometrics</string>
	<string name="biometrics_description">Verge Wallet lets you use your biometric data such as the fingerprint or face recognition to access your funds without having to type the PIN everytime you want to access your wallet. Verge Wallet doesn\'t store your biometric data, it just delegates the job to Android.</string>
	<string name="activity_biometrics_switch">Use fingerprint</string>
</resources>