<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_wallet"
        android:icon="@drawable/icon_wallet"
        android:title="@string/title_wallet"
        />

    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/icon_transactions"
        android:title="@string/title_transactions"
        />

    <item
        android:id="@+id/navigation_send"
        android:icon="@drawable/icon_send"
        android:title="@string/title_send"
        />

    <item
        android:id="@+id/navigation_receive"
        android:icon="@drawable/icon_receive"
        android:title="@string/title_receive"
        />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/icon_settings"
        android:title="@string/title_settings"
        />
</menu>
