<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_wallet"
        android:icon="@drawable/ic_wallet_black_24dp"
        android:title="@string/title_wallet"
        />

    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/ic_transactions_black_24dp"
        android:title="@string/title_transactions"
        />

    <item
        android:id="@+id/navigation_send"
        android:icon="@drawable/ic_send_black_24dp"
        android:title="@string/title_send"
        />

    <item
        android:id="@+id/navigation_receive"
        android:icon="@drawable/ic_receive_black_24dp"
        android:title="@string/title_receive"
        />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings"
        />
</menu>
