<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/fl_permission_view"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:animateLayoutChanges="true"
	android:orientation="vertical">

	<ImageView
		android:id="@+id/fl_permission_bg"
		style="@style/activities_paper_key_setup_background"
		android:src="@drawable/bg_main" />

	<TextView
		android:id="@+id/permission_title"
		style="@style/activities_paper_key_setup_title"
		android:text="@string/permissions_activity_title" />

	<ImageView
		android:id="@+id/permission_logo"
		style="@style/activities_paper_key_setup_icon"
		android:layout_below="@id/permission_title"
		android:background="@drawable/icon_rename" />

	<TextView
		android:id="@+id/permission_instructions"
		style="@style/activities_paper_key_description"
		android:layout_below="@id/permission_logo"
		android:text="@string/authorizations_activity_desc" />


	<LinearLayout
		style="@style/activities_paper_key_layout"
		android:layout_below="@id/permission_instructions">

		<androidx.appcompat.widget.SwitchCompat
			android:id="@+id/use_biometrics_switch"
			style="@style/activities_settings_switchcompats"
			android:text="@string/activity_permissions_gps" />

		<androidx.appcompat.widget.SwitchCompat
			android:id="@+id/permissions_camera_switch"
			style="@style/activities_settings_switchcompats"
			android:text="@string/activity_permissions_camera" />

	</LinearLayout>

	<Button
		android:id="@+id/permission_continue"
		style="@style/blue_button"
		android:text="@string/wallet_give_permissions" />

</RelativeLayout>