<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?vg_backgroundWhite"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tor_settings_title"
        android:text="@string/tor_settings_title"
        style="@style/activities_settings_title" />

    <ImageView
        android:id="@+id/tor_settings_header"
        android:layout_below="@+id/tor_settings_title"
        android:src="@drawable/header_tor"
        style="@style/activities_settings_image_header"
        />

    <TextView
        android:id="@+id/tor_settings_desc1"
        android:text="@string/tor_settings_desc1"
        android:layout_below="@id/tor_settings_header"
        style="@style/activities_settings_description" />

    <TextView
        android:id="@+id/tor_settings_desc2"
        android:text="@string/tor_settings_desc2"
        android:layout_below="@id/tor_settings_desc1"
        style="@style/activities_settings_description" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/tor_settings_obfuscate"
        android:checked="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tor_settings_desc2"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:text="@string/tor_settings_obfuscate_on_off"
        android:textColor="?vg_primaryDark" />

    <FrameLayout
        android:id="@+id/tor_settings_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tor_settings_obfuscate"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/tor_settings_ip_desc"
            android:textColor="?vg_primaryDark" />

        <TextView
            android:id="@+id/tor_settings_ip_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/localhost_label" />
    </FrameLayout>

    <org.osmdroid.views.MapView
        android:layout_below="@id/tor_settings_ip"
        android:id="@+id/tor_settings_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</RelativeLayout>