<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?vg_backgroundGrey"
    android:orientation="vertical">

    <TextView
        android:id="@+id/paper_key_title"
        style="@style/activities_settings_title"
        android:text="@string/paperkey_title" />

    <ImageView
        android:id="@+id/paperkey_header"
        style="@style/activities_settings_image_header"
        android:layout_below="@+id/paper_key_title"
        android:src="@drawable/header_paperkey" />

    <TextView
        android:id="@+id/paperkey_desc"
        android:layout_below="@+id/paperkey_header"
        android:text="@string/paperkey_desc"
        style="@style/activities_settings_description"/>

    <Button
        android:id="@+id/activity_paperkey_button"
        style="@style/blue_button"
        android:text="@string/paperkey_button" />

</RelativeLayout>