<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fl_welcome_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/fl_welcome_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/fl_welcome_verge_logo"
            style="@style/splash_verge_logo"/>

        <TextView
            android:id="@+id/splash_title"
            android:text="@string/splash_title"
            style="@style/splash_verge_title"/>

        <TextView
            android:id="@+id/splash_subtitle"
            android:text="@string/splash_alpha_notice"
            style="@style/splash_verge_subtitle"
            />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/launch_bottom_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <TextView
            android:text="@string/splash_slogan"
            android:id="@+id/splash_slogan"
            style="@style/splash_verge_slogan" />

        <TextView
            android:id="@+id/splash_alpha_notice"
            android:text="@string/splash_sub"
            style="@style/splash_verge_alpha_notice"/>

    </RelativeLayout>

</RelativeLayout>