<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/verge_white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/passphrase_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/passphrase_title"
        android:textAlignment="center"
        android:textColor="@color/verge_colorPrimaryDark"
        android:textSize="@dimen/text_title_size" />

    <ImageView
        android:id="@+id/passphrase_header"
        android:layout_width="wrap_content"
        android:layout_height="190dp"
        android:layout_below="@+id/passphrase_title"
        android:layout_alignParentEnd="true"
        android:padding="20dp"
        android:src="@drawable/header_passphrase" />

    <TextView
        android:id="@+id/passphrase_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passphrase_header"
        android:layout_marginTop="20dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingBottom="30dp"
        android:text="@string/passphrase_desc"

        android:textAlignment="center"
        android:textSize="@dimen/text_small_size" />

    <LinearLayout
        android:id="@+id/passphrase_check_chars"
        style="@style/passphrase_check_layout"
        android:layout_below="@id/passphrase_subtitle">

        <ImageView
            android:id="@+id/passphrase_tick_8_chars"
            style="@style/passphrase_check_icon" />

        <TextView
            android:id="@+id/passphrase_label_8_chars"
            android:text="@string/passphrase_8_chars"
            style="@style/passphrase_check_label"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passphrase_check_upper_lower"
        style="@style/passphrase_check_layout"
        android:layout_below="@id/passphrase_check_chars">

        <ImageView
            android:id="@+id/passphrase_tick_upper_lower"
            style="@style/passphrase_check_icon"  />

        <TextView
            android:id="@+id/passphrase_label_upper_lower"
            android:text="@string/passphrase_upper_lower"
            style="@style/passphrase_check_label" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passphrase_check_symbols"
        style="@style/passphrase_check_layout"
        android:layout_below="@id/passphrase_check_upper_lower">

        <ImageView
            android:id="@+id/passphrase_ticked_special_chars"
            style="@style/passphrase_check_icon"  />

        <TextView
            android:id="@+id/passphrase_label_special_chars"
            android:text="@string/passphrase_symbols"
            style="@style/passphrase_check_label" />
    </LinearLayout>

    <EditText
        android:id="@+id/passphrase_field_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passphrase_check_symbols"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:hint="@string/passphrase_hint"
        android:inputType="textPassword"
        android:paddingTop="15dp"
        android:textAlignment="center" />

    <com.omega_r.libs.OmegaCenterIconButton
        android:id="@+id/passphrase_confirm_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/form_rounded_white_rect"
        android:backgroundTint="@color/verge_colorAccent"
        android:drawableStart="@drawable/icon_lock"
        android:drawableTint="@color/verge_white"
        android:enabled="false"
        android:text="@string/passphrase_button"
        android:textColor="@color/verge_white"
        android:textSize="@dimen/text_regular_size" />


</RelativeLayout>