<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_donate_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/verge_white"
    android:orientation="vertical">


    <Button
        android:id="@+id/button_donate"
        android:text="@string/donate_button"
        style="@style/blue_button" />

    <FrameLayout
        android:id="@+id/donate_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/bg_color"
        android:backgroundTintMode="add" />

    <ImageView
        android:id="@+id/donate_header"
        android:layout_width="wrap_content"
        android:layout_height="190dp"
        android:layout_below="@+id/donate_title"
        android:padding="20dp"
        android:src="@drawable/header_donate" />

    <TextView
        android:id="@+id/donate_desc2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/donate_desc1"
        android:layout_marginTop="20dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/donate_desc2"
        android:textAlignment="center"
        android:textSize="@dimen/text_smaller_size" />

    <TextView
        android:id="@+id/donate_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/donate_title"
        android:textAlignment="center"
        android:textColor="@color/verge_colorPrimaryDark"
        android:textSize="@dimen/text_title_size" />

    <TextView
        android:id="@+id/donate_desc1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/donate_header"
        android:layout_marginTop="20dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/donate_desc1"
        android:textAlignment="center"
        android:textSize="@dimen/text_small_size" />


</RelativeLayout>